--- a/README
+++ b/README
@@ -1,3 +1,3 @@
 CBBC's website
 
-need bootstrap(git://github.com/twitter/bootstrap.git)
+may need bootstrap(git://github.com/twitter/bootstrap.git)
